chore: update http client
